--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
     --transparentgreen: #00bb8f0d;
     --red: #FF5555;
     --transparentred: #ff55550d;
-
     --darknavy: #303B59;
     --transparentdarknavy: #303b5980;
     --lightblue: #CAC9FF;
@@ -78,8 +77,6 @@ body {
     justify-content: space-between;
 }
 
-
-
 .result {
     font-size: 1.5rem;
     font-weight: 700;
@@ -133,28 +130,37 @@ h2 {
     color: var(--darknavy);
 }
 
-#rightcol>div>div {
+#rightcol>div>div>div {
     font-size: 1.125rem;
     line-height: 1.4375rem;
     display: flex;
     justify-content: space-between;
-    border-radius: 12px;
     box-sizing: border-box;
-    padding: 1rem;
     margin-top: 0;
-    margin-bottom: 1rem;
+    width: 100%;   
+    padding-left: 1rem;
 }
 
-#rightcol>div>div>p {
+#rightcol>div>div {
+    border-radius: 12px;
+    padding: 1rem;
+}
+
+#rightcol>div>div>div>p:nth-of-type(2) {
     font-size: 1.125rem;
     font-weight: 700;
     line-height: 1.4375rem;
     color: var(--transparentdarknavy);
 }
 
-#rightcol>div>div>p>span {
+#rightcol>div>div>div>p:nth-of-type(2)>span {
     color: var(--darknavy);
     padding-right: .5rem
+}
+
+#rightcol>div>div {
+    display: flex;
+    margin-bottom: 1rem;
 }
 
 #rightcol p, #rightcol h3 {
@@ -173,25 +179,22 @@ h3 {
     line-height: 1.4375rem;
 }
 
-.reaction {
+.Reaction {
     background-color: var(--transparentred);
     color: var(--red);
 }
 
-.memory {
+.Memory {
     background-color: var(--transparentyellow);
     color: var(--yellow);
 }
 
-.verbal {
+.Verbal {
     background-color: var(--transparentgreen);
     color: var(--green);
 }
 
-.visual {
+.Visual {
     background-color: var(--transparentblue);
     color: var(--blue);
 }
-
-
-
